--- a/HTML Pertemuan 1/index.html
+++ b/HTML Pertemuan 1/index.html
@@ -14,7 +14,7 @@
     </div>
     <br>
     <div style="background-color: rgba(255, 255, 255, 0.4); padding: 7px;">
-        <p>I love HTML and so do you. I learn it by myself from this specific site.<br>
+        <p>I love HTML and so do you. I learn it by flaenfkanfkaNklvjnaekgvaekngiaekngvngaengmyself from this specific site.<br>
             If you want to learn it like me then you can visit this site <a href="https://www.w3schools.com/HTML/">this
                 is a
                 link</a>,<br>
